# comp0034-cw1i-zczlr12

./: .gitignore  README.md  comp0034-coursework1.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: __init__.py  api_routes.py  helpers.py  models.py  routes.py  schemas.py
tests/: conftest.py  test_routes.py
